Fix too close elements...maybe?

--- a/resources/assets/sass/components/global/footer.scss
+++ b/resources/assets/sass/components/global/footer.scss
@@ -2,6 +2,11 @@
     background: $white;
     margin-top: 20px;
     box-shadow: 0px 0px 6px darken($light-gray, 10%);
+    text-align: center;
+
+    .container {
+        text-align: center;
+    }
 
     img.te-logo {
         margin-top: 25px;
@@ -20,6 +25,8 @@
 
         li a {
             text-decoration: none;
+            display: inline-block;
+            padding: 5px 10px;
         }
 
         li a:hover {
@@ -114,4 +121,27 @@
             }
         }
     }
+}
+
+@media (min-width: 768px) {
+
+
+    .pre-footer {
+        text-align: left;
+        
+        .container {
+            text-align: left;
+        }
+
+    }
+
+
+    .navigation {
+        li a {
+            display: inline;
+            padding: 5px;
+        }    
+    }
+
+
 }
