--- a/resources/assets/sass/components/landing/about.scss
+++ b/resources/assets/sass/components/landing/about.scss
@@ -1,3 +1,8 @@
+.logo-eu {
+    display: inline-block;
+    padding: 10px 0;
+}
+
 .about-section {
     padding-top: 20px;
     color: $white;
